testsuite/tests/saks/should_fail/saks_fail004.hs
{-# LANGUAGE StandaloneKindSignatures #-}
{-# LANGUAGE PolyKinds, DataKinds #-}

module SAKS_Fail004 where

import Data.Kind (Type)

-- See also: T16263
type Q :: Eq a => Type
data Q
