testsuite/tests/saks/should_fail/saks_fail004.stderr

saks_fail004.hs:9:11: error: [GHC-01259]
    • Illegal constraint in a kind: forall a. Eq a => *
    • In a standalone kind signature for ‘Q’: Eq a => Type
